# game

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  TODO.md  appveyor.yml  azure-pipelines.yml  changelog.txt
mp/src/: CMakeLists.txt  _clang-format  creategameprojects  creategameprojects.bat  creategameprojects.ps1  creategameprojects_steam.bat  creategameprojects_steam.ps1  run_build.bat  sln_fix.txt
mp/src/cmake/: precompile_header.cmake  ucm.cmake
mp/src/common/: IVGuiModule.h  SteamCommon.h  compiledcaptionswap.cpp  language.cpp
mp/src/common/GameUI/: IGameUI.h
mp/src/common/lzma/: lzma.h
mp/src/common/xbox/: xboxstubs.h
mp/src/cryptopp/: CMakeLists.txt  algebra.h  aria-simd.cpp  aria.cpp  aria_simd.cpp  bench1.cpp  bench2.cpp  blake2-simd.cpp  blake2.cpp  blake2b_simd.cpp  blake2s_simd.cpp  camellia.cpp  chacha.cpp  chacha_avx.cpp  chacha_simd.cpp  cham_simd.cpp  cpu.cpp  crc-simd.cpp  crc.cpp  crc_simd.cpp  cryptlib.cpp  cryptopp.vpc  datatest.cpp  default.cpp  des.cpp  ec2n.cpp  eccrypto.cpp  eccrypto.h  ecp.cpp  eprecomp.h  filters.cpp  fipstest.cpp  gcm-simd.cpp  gcm.cpp  gcm_simd.cpp  gf2n.cpp  ida.cpp  integer.cpp  kalyna.cpp  kalynatab.cpp  (+63 more)
mp/src/devtools/: base.xcconfig  gendbg.sh  makefile_base_posix.mak  release.xcconfig
mp/src/enc_temp_folder/fa234e6d857107e93ff191dc319708b/: weapon_mom_rocketlauncher.cpp
mp/src/fgdlib/: fgdlib.vcxproj.vpc_crc  gamedata.cpp  gdvar.cpp  inputoutput.cpp  wckeyvalues.cpp
mp/src/game/: CMakeLists.txt
mp/src/game/client/: .directory  achievement_notification_panel.cpp  achievement_notification_panel.h  basepresence.cpp  basepresence.h  basepresence_xbox.cpp  beamdraw.cpp  beamdraw.h  c_baseanimating.cpp  c_baseanimating.h  c_baseanimatingoverlay.cpp  c_basecombatcharacter.cpp  c_basecombatcharacter.h  c_basecombatweapon.cpp  c_basecombatweapon.h  c_baseentity.cpp  c_baseentity.h  c_baseflex.cpp  c_baseflex.h  c_baselesson.cpp  c_baselesson.h  c_baseplayer.cpp  c_baseplayer.h  c_basetempentity.cpp  c_basetempentity.h  c_baseviewmodel.cpp  c_beamspotlight.cpp  c_dynamiclight.cpp  c_effects.cpp  c_effects.h  c_entitydissolve.cpp  c_env_dof_controller.cpp  c_env_fog_controller.h  c_env_projectedtexture.cpp  c_env_projectedtexture.h  c_fire_smoke.h  c_func_breakablesurf.cpp  c_gameinstructor.cpp  c_gameinstructor.h  c_gib.cpp  (+173 more)
mp/src/game/gameui2/: basepanel.cpp  basepanel.h  button_mainmenu.cpp  button_mainmenu.h  button_panel.cpp  button_panel.h  gameui2_base.vpc  gameui2_interface.cpp  gameui2_interface.h  igameui2.h  mainmenu.cpp  mainmenu.h  panel_options.cpp  panel_options.h
mp/src/game/ghost_server/: ghostServer.cpp  ghostServer.h  ghost_server_base.vpc
mp/src/game/server/: AI_ResponseSystem.cpp  (+249 more)
mp/src/gameui/: BasePanel.cpp  BasePanel.h  CMakeLists.txt  CommandCheckButton.cpp  CvarNegateCheckButton.cpp  CvarNegateCheckButton.h  CvarSlider.cpp  CvarTextEntry.cpp  CvarTextEntry.h  CvarToggleCheckButton.cpp  EngineInterface.h  GameConsole.cpp  GameConsole.h  GameConsoleDialog.cpp  GameConsoleDialog.h  GameUI.vpc  GameUI_Interface.cpp  GameUI_Interface.h  KeyToggleCheckButton.cpp  LabeledCommandComboBox.cpp  LoadingDialog.cpp  LoadingDialog.h  LoadingTipPanel.cpp  LogoFile.cpp  MainMenu.cpp  MainMenu.h  MainMenuButton.cpp  MainMenuButton.h  ModInfo.cpp  MouseMessageForwardingPanel.cpp  OptionsDialog.cpp  OptionsDialog.h  OptionsSubAudio.cpp  OptionsSubAudio.h  OptionsSubKeyboard.cpp  OptionsSubKeyboard.h  OptionsSubMouse.cpp  OptionsSubMouse.h  OptionsSubVideo.cpp  OptionsSubVideo.h  (+32 more)
mp/src/materialsystem/: IShaderSystem.h
mp/src/mathlib/: 3dnow.cpp  CMakeLists.txt  almostequal.cpp  color_conversion.cpp  imagequant.cpp  lightdesc.cpp  mathlib.vcxproj.vpc_crc  mathlib_base.cpp  polyhedron.cpp  quantize.cpp  randsse.cpp  sparse_convolution_noise.cpp  sse.cpp  sseconst.cpp  ssenoise.cpp
mp/src/nbproject_default/: configurations.xml  project.xml
mp/src/nui/: INuiInterface.h  NuiBrowserListener.h  nui.cpp  nui.h  nui.vpc  nui_app.cpp  nui_app.h  nui_client.cpp  nui_client.h  nui_frame.cpp  nui_frame.h  nui_interface.cpp  nui_interface.h  nui_predef.h  nui_util_win32.h  nui_utils.cpp  nui_utils.h
mp/src/nui_host/: nui_host.cpp  nui_host.vpc
mp/src/public/: FileWatchdog.cpp  FileWatchdog.h  IMovementListener.h  OfflineMode.h  PlayerState.h  ScratchPadUtils.cpp  ScratchPadUtils.h  XUnzip.cpp  XZip.cpp  basehandle.h  bitvec.h  bone_setup.cpp  bspfile.h  bspflags.h  builddisp.cpp  builddisp.h  cdll_int.h  chunkfile.cpp  client_render_handle.h  collisionutils.cpp  collisionutils.h  con_nprint.h  const.h  datamap.h  disp_common.cpp  disp_powerinfo.h  dispcoll.cpp  dispcoll_common.cpp  dispcoll_common.h  dlight.h  dt_recv.h  dt_send.cpp  dt_send.h  edict.h  editor_sendcommand.cpp  eiface.h  eifacev21.h  filesystem.h  filesystem_init.cpp  gametrace.h  (+39 more)
mp/src/raytrace/: CMakeLists.txt  raytrace.cpp  raytrace.vcxproj.vpc_crc  trace2.cpp
mp/src/tier1/: CMakeLists.txt  KeyValues.cpp  NetAdr.cpp  bitbuf.cpp  byteswap.cpp  checksum_md5.cpp  checksum_sha1.cpp  commandbuffer.cpp  convar.cpp  diff.cpp  fileio.cpp  generichash.cpp  ilocalize.cpp  interface.cpp  kvpacker.cpp  mempool.cpp  memstack.cpp  newbitbuf.cpp  pathmatch.cpp  processor_detect.cpp  processor_detect_linux.cpp  reliabletimer.cpp  snappy.cpp  stringpool.cpp  strtools.cpp  strtools_unicode.cpp  tier1.vcxproj.filters  tier1.vcxproj.vpc_crc  tier1.vpc  utlbuffer.cpp  utlstring.cpp
mp/src/vgui2/: CMakeLists.txt
mp/src/vpc_scripts/: default.vgc  groups.vgc  loadaddress.vpc  mm_exe_base.vpc  mm_exe_posix_base.vpc  mm_exe_win32_base.vpc  platform_dirs.vpc  projects.vgc  source_dll_base.vpc  source_dll_win32_base.vpc  source_dll_win32_debug.vpc  source_dll_win32_release.vpc  source_exe_base.vpc  source_exe_con_base.vpc  source_exe_linux_base.vpc  source_exe_posix_base.vpc  source_exe_win_win32_base.vpc  source_exe_win_win32_debug.vpc  source_exe_win_win32_release.vpc  source_lib_base.vpc  source_lib_win32_base.vpc  source_lib_win32_debug.vpc  source_lib_win32_release.vpc  source_video_base.vpc  source_win32_base.vpc
(+4303 files in other folders)
