project(vgui_controls)

set(VGUI_SOURCES
        "../public/filesystem_helpers.cpp"
        "vgui_controls/AnalogBar.cpp"
        "vgui_controls/AnimatingImagePanel.cpp"
        "vgui_controls/AnimationController.cpp"
        "vgui_controls/BitmapImagePanel.cpp"
        "vgui_controls/BuildFactoryHelper.cpp"
        "vgui_controls/BuildGroup.cpp"
        "vgui_controls/BuildModeDialog.cpp"
        "vgui_controls/Button.cpp"
        "vgui_controls/CheckButton.cpp"
        "vgui_controls/CheckButtonList.cpp"
        "vgui_controls/CircularProgressBar.cpp"
        "vgui_controls/ComboBox.cpp"
        "vgui_controls/consoledialog.cpp"
        "vgui_controls/ControllerMap.cpp"
        "vgui_controls/controls.cpp"
        "vgui_controls/CvarSlider.cpp"
        "vgui_controls/CvarTextEntry.cpp"
        "vgui_controls/CvarToggleCheckButton.cpp"
        "vgui_controls/DirectorySelectDialog.cpp"
        "vgui_controls/Divider.cpp"
        "vgui_controls/EditablePanel.cpp"
        "vgui_controls/ExpandButton.cpp"
        "vgui_controls/FileOpenDialog.cpp"
        "vgui_controls/FileOpenStateMachine.cpp"
        "vgui_controls/FocusNavGroup.cpp"
        "vgui_controls/Frame.cpp"
        "vgui_controls/GraphPanel.cpp"
        "vgui_controls/HTML.cpp"
        "vgui_controls/Image.cpp"
        "vgui_controls/ImageList.cpp"
        "vgui_controls/ImagePanel.cpp"
        "vgui_controls/InputDialog.cpp"
        "vgui_controls/KeyBindingHelpDialog.cpp"
        "vgui_controls/KeyBoardEditorDialog.cpp"
        "vgui_controls/KeyRepeat.cpp"
        "vgui_controls/Label.cpp"
        "vgui_controls/ListPanel.cpp"
        "vgui_controls/ListViewPanel.cpp"
        "vgui_controls/Menu.cpp"
        "vgui_controls/MenuBar.cpp"
        "vgui_controls/MenuButton.cpp"
        "vgui_controls/MenuItem.cpp"
        "vgui_controls/MessageBox.cpp"
        "vgui_controls/MessageDialog.cpp"
        "vgui_controls/Panel.cpp"
        "vgui_controls/PanelListPanel.cpp"
        "vgui_controls/PerforceFileExplorer.cpp"
        "vgui_controls/PerforceFileList.cpp"
        "vgui_controls/perforcefilelistframe.cpp"
        "vgui_controls/ProgressBar.cpp"
        "vgui_controls/ProgressBox.cpp"
        "vgui_controls/PropertyDialog.cpp"
        "vgui_controls/PropertyPage.cpp"
        "vgui_controls/PropertySheet.cpp"
        "vgui_controls/QueryBox.cpp"
        "vgui_controls/RadioButton.cpp"
        "vgui_controls/RichText.cpp"
        "vgui_controls/RotatingProgressBar.cpp"
        "vgui_controls/savedocumentquery.cpp"
        "vgui_controls/ScalableImagePanel.cpp"
        "vgui_controls/ScrollableEditablePanel.cpp"
        "vgui_controls/ScrollBar.cpp"
        "vgui_controls/ScrollBarSlider.cpp"
        "vgui_controls/ScrubbableProgressBar.cpp"
        "vgui_controls/SectionedListPanel.cpp"
        "vgui_controls/Slider.cpp"
        "vgui_controls/Splitter.cpp"
        "vgui_controls/subrectimage.cpp"
        "vgui_controls/TextEntry.cpp"
        "vgui_controls/TextImage.cpp"
        "vgui_controls/ToggleButton.cpp"
        "vgui_controls/Tooltip.cpp"
        "vgui_controls/ToolWindow.cpp"
        "vgui_controls/TreeView.cpp"
        "vgui_controls/TreeViewListControl.cpp"
        "vgui_controls/URLLabel.cpp"
        "vgui_controls/WizardPanel.cpp"
        "vgui_controls/WizardSubPanel.cpp"
        "src/vgui_key_translation.cpp"
        )

add_library(vgui_controls STATIC ${VGUI_SOURCES})

target_compile_definitions(vgui_controls PRIVATE GE_DLL)

target_include_directories(vgui_controls PRIVATE
        "${CMAKE_SOURCE_DIR}/common"
        "${CMAKE_SOURCE_DIR}/public"
        "${CMAKE_SOURCE_DIR}/public/tier0"
        "${CMAKE_SOURCE_DIR}/public/tier1"
        "${CMAKE_SOURCE_DIR}/public/vgui_controls"
        )